apps/base/servarr/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    strategy:
      type: Recreate
    spec:
      containers:
        - name: jellyfin
          image: lscr.io/linuxserver/jellyfin:10.11.8 # {"$imagepolicy": "servarr:jellyfin"}
          ports:
            - name: http
              containerPort: 8096
              # - name: http
              #   protocol: UDP
              #   containerPort: 7359
              # - name: http
              #   protocol: UDP
              #   containerPort: 1900
          volumeMounts:
            - name: jellyfin
              mountPath: /config
            - name: media
              mountPath: /data
      volumes:
        - name: jellyfin
          persistentVolumeClaim:
            claimName: jellyfin
        - name: media
          nfs:
            server: 10.0.1.134
            path: /var/nfs/shared/Media_Server
            readOnly: true
