apps/base/servarr/jellyfin/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Jellyfin
    gethomepage.dev/description: Software Media System Server
    gethomepage.dev/group: Media Server
    gethomepage.dev/icon: jellyfin.png
    gethomepage.dev/pod-selector: ""
spec:
  parentRefs:
    - name: http
      namespace: gateway-system
  hostnames:
    - "jellyfin.southcity.dev"
  rules:
    - backendRefs:
        - name: jellyfin
          port: 8096
